--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,9 @@
     "name": "sharik709/laravel-github",
     "description": "It will make it easier for laravel application to use github api",
     "type": "library",
+    "require" : {
+          "tan-tan-kanarek/github-php-client": "*"
+    },
     "require-dev": {
         "phpunit/phpunit": "^8.1@dev"
     },
