fixed issue with require in composer.json

--- a/composer.json
+++ b/composer.json
@@ -22,5 +22,13 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {}
+    "extra": {
+        "laravel": {
+            "providers": [
+                "ANet\\AuthorizeNetServiceProvider"
+            ],
+            "aliases": {
+            }
+        }
+    }
 }
