--- a/composer.json
+++ b/composer.json
@@ -3,10 +3,10 @@
     "description": "It will make it easier for laravel application to use github api",
     "type": "library",
     "require" : {
-          "tan-tan-kanarek/github-php-client": "*"
+        "tan-tan-kanarek/github-php-client": "^1.0",
+        "illuminate/support" : "^5.8.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.1@dev"
     },
     "license": "MIT",
     "autoload" : {
