corrected namespace for service provider

--- a/composer.json
+++ b/composer.json
@@ -25,10 +25,8 @@
     "extra": {
         "laravel": {
             "providers": [
-                "ANet\\AuthorizeNetServiceProvider"
-            ],
-            "aliases": {
-            }
+                "LaravelGithub\\LaravelGithubServiceProvider"
+            ]
         }
     }
 }
